# books-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: crud.py  endpoints.py  main.py
cli/: display.py  menu.py
utils/: auth.py  checker.py  downloader.py  logger.py
