[project]
name = "book-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "questionary>=2.1.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "term-image>=0.7.2",
    "uvicorn[standard]>=0.35.0",
]
